<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_margin="56dp"
        app:cardCornerRadius="50dp"
        app:cardBackgroundColor="@color/fundoInicial"
        android:elevation="10dp">

        <LinearLayout
            android:id="@+id/linearCadastro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_card"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/textCadastro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/Register"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cadastroName"
                style="@style/edit_Textext"
                android:hint="@string/Username"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cadastroEmail"
                style="@style/edit_Textext"
                android:hint="@string/Email"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cadastroSenha"
                style="@style/edit_Textext"
                android:inputType="numberPassword"
                android:hint="@string/Password"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:text="Register"
                android:textColor="@color/white"
                android:background="@drawable/shape_button_orange"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>